force-app/main/default/objects/FEC_Case_Assignment_Log_Detail__c/FEC_Case_Assignment_Log_Detail__c.object-meta.xml
<CustomObject>
    <description>Obj ghi nhận các thông tin chi tiết của từng lượt phân bổ (người nhận phân bổ, số lượng nhận phân bổ)</description>
    <label>Case Assignment Log Detail</label>
    <nameField>
        <label>Case Assignment Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Assignment Log Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>