force-app/main/default/objects/FEC_Case_Assignment_Log_Detail__c/fields/FEC_Case_Assignment_log_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Assignment_log_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Assignment log Name</label>
    <referenceTo>FEC_Case_Assignment_Logs__c</referenceTo>
    <relationshipLabel>User Information</relationshipLabel>
    <relationshipName>Case_Assignment_Log_Details</relationshipName>
    <type>Lookup</type>
</CustomField>