force-app/main/default/objects/FEC_Case_Assignment_Log_Detail__c/fields/FEC_Name_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_Name_User__c</fullName>
    <label>Name User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>