force-app/main/default/objects/FEC_Case_Assignment_Log_Detail__c/fields/FEC_Number_of_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Number_of_Case__c</fullName>
    <label>Number of Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>